# tournament-api

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yaml  tests.yaml
api/: users.py
config/: base.py
db/: session.py
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 37ee3a3c30b2_user_model.py  4ca36ff46681_user_model.py
models/: __init__.py  base.py  user.py
requirements/: development.txt
schemas/: user.py
tests/api/: test_users_views.py  test_views.py
utils/: auth.py
